<resources>
    <string name="demo_user_name">13213213212</string>
    <string name="demo_user_pwd">123456</string>
    <string name="demo_version">V1.0.3</string>

    <string name="app_name">数据资产管理</string>
    <string name="empty_data">暂无结果</string>
    <string name="error_msg">出错了</string>
    <string name="skip_guide">跳过</string>
    <string name="app_title">重庆市消防救援总队</string>
    <string name="app_title_2">数据资产管理平台</string>
    <string name="hint_user_name">请输入账户</string>
    <string name="hint_user_pwd">请输入密码</string>
    <string name="sign_in">登&#160;&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="action_task">通讯录</string>
    <string name="action_conversation">消息</string>
    <string name="action_mine">我的</string>
    <string name="mine">我的</string>
    <string name="my_task">填报任务</string>
    <string name="current_version">当前版本</string>
    <string name="feedback">意见反馈</string>
    <string name="sign_out">退出登录</string>
    <string name="helping_center">帮助中心</string>
    <string name="check_update">检查更新</string>
    <string name="sign_out_title">温馨提示</string>
    <string name="sign_out_msg">即将退出当前账号</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="clear_input">清除</string>
    <string name="latest_version">已是最新版本</string>
    <string name="task_detail">任务详情</string>
    <string name="data_upload">数据上报</string>
    <string name="hint_ask">输入填报中遇到的问题</string>
    <string name="ask">提问</string>
    <string name="answer">答：</string>
    <string name="question">问：</string>
    <string name="add">添加</string>
    <string name="clear">清空</string>
    <string name="add_record">添加记录</string>
    <string name="modify_record">修改记录</string>
    <string name="continue_input_title">继续填报</string>
    <string name="continue_input_msg">提交本条记录之后是否继续填报新的记录?</string>
    <string name="remember_action">记住操作</string>
    <string name="continue_input">继续填报</string>
    <string name="not_continue_input">不，我已填报完成</string>
    <string name="statics">移动专题</string>
    <string name="helping">新闻资讯</string>
    <string name="announcement">实时服务</string>
    <string name="organization">资源目录</string>
    <string name="task">信息填报</string>
    <string name="hint_search">指定搜索内容</string>
    <string name="action_home">首页</string>
    <string name="no_announcement">暂无公告消息</string>
    <string name="task_input">填报任务</string>
    <string name="task_check">审核任务</string>
    <string name="task_data">数据任务</string>
    <string name="organisation_arc">通迅录</string>
    <string name="total_user_count">共%1$d人</string>
    <string name="hint_keyword">请输入关键字</string>
    <string name="resource_list">资源目录</string>
    <string name="basic_info">基本信息</string>
    <string name="used_info">使用情况</string>
    <string name="content_des">内容描述</string>
    <string name="download_count">下载次数</string>
    <string name="resource_des">资 源 描 述：</string>
    <string name="要素">所属要素</string>
    <string name="share_type">共 享 类 型：</string>
    <string name="share_range">共享范围</string>
    <string name="supplier">管 理 单 位：</string>
    <string name="police_category">所属业务警种</string>
    <string name="share_method">共享方式</string>
    <string name="resource_name">资源信息名称</string>
    <string name="resource_identity">信息标识符：</string>
    <string name="resource_publish_time">发 布 时 间：</string>
    <string name="resource_tag">标&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;签：</string>
    <string name="data_field_index">序号</string>
    <string name="english_name">英文名称</string>
    <string name="chinese_name">中文名称</string>
    <string name="data_format">数据格式</string>
    <string name="search">搜索</string>
    <string name="no_qr_code">未发现二维码</string>
    <string name="touch_to_continue">轻触屏幕继续扫描</string>
    <string name="send">发送</string>
    <string name="touch_and_hold">按住说话</string>
    <string name="pre_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="total_page_count">共%1$d页</string>
    <string name="relevance_data">相关数据</string>
    <string name="data_detail">数据详情</string>
    <string name="apply_resource_name">申请名称</string>
    <string name="apply_resource_reason">申请原因</string>
    <string name="resource_application">资源申请</string>
    <string name="service_application">服务申请</string>
    <string name="apply_resource_name_empty">申请名称为空</string>
    <string name="apply_resource_reason_empty">申请原因为空</string>
    <string name="submit_application">提交</string>
    <string name="system_message">系统消息</string>
    <string name="police_statics">警情数据</string>
    <string name="real_time_statics">实时警情</string>
    <string name="duty_statics">值班动态</string>
    <string name="detail">详情</string>
    <string name="hint_user_search">搜索部门或人员</string>
    <string name="more">更多></string>
    <string name="old_pwd">请输入原始密码</string>
    <string name="new_pwd">请输入新密码</string>
    <string name="confirm_pwd">确认新密码</string>
    <string name="pwd_modify">修改密码</string>
    <string name="error_confirm_pwd">确认密码不一致</string>
    <string name="password_modification_succeeded">修改密码成功</string>
    <string name="failed_to_modify_pwd">修改密码失败</string>
    <string name="confirm_modify">确认修改</string>
    <string name="confirm_apply">确认申请</string>
    <string name="data_field">数据项</string>
    <string name="data_preview">数据预览</string>
    <string name="view_data_field">查看数据项</string>
</resources>
