<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity">
    <item
        android:id="@+id/action_home"
        android:checked="true"
        android:icon="@drawable/selector_home"
        android:title="@string/action_home" />
    <item
        android:id="@+id/action_task"
        android:icon="@drawable/selector_task"
        android:title="@string/action_task" />
    <item
        android:id="@+id/action_conversation"
        android:icon="@drawable/selector_conversation"
        android:title="@string/action_conversation" />
    <item
        android:id="@+id/action_mine"
        android:icon="@drawable/selector_mine"
        android:title="@string/action_mine" />
</menu>