<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_resource_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_info"
            android:textAppearance="@style/TextAppearance.AppTheme.Small"
            android:textColor="#ff383f52"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_apply_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/info"
            android:drawablePadding="4dp"
            android:textColor="#ff9a9a9a"
            android:textSize="12sp"
            tools:text="审核未通过" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#ff383f52" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:divider="@drawable/shape_v_divider">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/shape_h_divider">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:padding="4dp"
                android:text="@string/resource_identity"
                android:textColor="#ff656b7c" />

            <TextView
                android:id="@+id/tv_resource_identity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                android:textColor="#ff656b7c"
                tools:text="50X20021" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/shape_h_divider">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:padding="4dp"
                android:text="@string/share_type"
                android:textColor="#ff656b7c" />

            <TextView
                android:id="@+id/tv_share_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                android:textColor="#ff656b7c"
                tools:text="大数据专班" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/shape_h_divider">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:padding="4dp"
                android:text="@string/supplier"
                android:textColor="#ff656b7c" />

            <TextView
                android:id="@+id/tv_supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                android:textColor="#ff656b7c"
                tools:text="大数据专班" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/shape_h_divider">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:padding="4dp"
                android:text="@string/resource_publish_time"
                android:textColor="#ff656b7c" />

            <TextView
                android:id="@+id/tv_publish_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                android:textColor="#ff656b7c"
                tools:text="通用地址信息" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/shape_h_divider">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:padding="4dp"
                android:text="@string/resource_des"
                android:textColor="#ff656b7c" />

            <TextView
                android:id="@+id/tv_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                android:textColor="#ff656b7c"
                tools:text="50X20021" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/shape_h_divider">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:padding="4dp"
                android:text="@string/resource_tag"
                android:textColor="#ff656b7c" />

            <TextView
                android:id="@+id/tv_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                android:textColor="#ff656b7c"
                tools:text="50X20021" />
        </TableRow>
    </TableLayout>
</LinearLayout>