<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.task.AddRecordActivity">

    <RelativeLayout
        android:background="?colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="?selectableItemBackground"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_record"
            android:textAppearance="@style/TextAppearance.AppTheme.Medium"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffeeeef5"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@drawable/shape_blue_btn_bg_2"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:text="@string/clear_input"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:background="@drawable/shape_primary_btn_bg_2"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>