<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/pwd_modify"
                android:textAppearance="@style/TextAppearance.AppTheme"
                android:textColor="#ff6d7a9b"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_old_pwd"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/shape_old_pwd_bg"
                android:ems="10"
                android:hint="@string/old_pwd"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColorHint="#ffa7a7a7"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <EditText
                android:id="@+id/et_new_pwd"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/shape_new_pwd_bg"
                android:ems="10"
                android:hint="@string/new_pwd"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColorHint="#ffa7a7a7"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_old_pwd" />

            <EditText
                android:id="@+id/et_new_pwd_confirm"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/shape_new_pwd_bg"
                android:ems="10"
                android:hint="@string/confirm_pwd"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColorHint="#ffa7a7a7"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_new_pwd" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_modify"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/confirm_modify"
                android:textAppearance="@style/TextAppearance.AppTheme.Micro"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_new_pwd_confirm" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:src="@drawable/ic_close_2" />
</LinearLayout>
