<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/tl_dat_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:divider="@drawable/shape_v_divider"
            android:showDividers="beginning|middle|end">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/shape_h_divider"
                android:showDividers="beginning|middle|end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ff43bbef"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:text="@string/english_name"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ff43bbef"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:text="@string/chinese_name"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ff43bbef"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:gravity="center"
                    android:text="@string/data_format"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>