<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="24dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/resource_application"
                android:textAppearance="@style/TextAppearance.AppTheme"
                android:textColor="#ff6d7a9b"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:lineSpacingExtra="8dp"
                android:textAppearance="@style/TextAppearance.AppTheme.Small"
                android:textColor="#ff383f52"
                tools:text="资源名称：行政处罚告知笔录\n资源描述：暂无" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_required" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/apply_resource_reason"
                    android:textAppearance="@style/TextAppearance.AppTheme.Small"
                    android:textColor="#ff333333" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_apply_reason"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape_white_round_corner"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppTheme.Small" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="32dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/confirm_apply"
                android:textAppearance="@style/TextAppearance.AppTheme.Micro"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:src="@drawable/ic_close_2" />
</LinearLayout>